--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "src"]
+[submodule "parallel-machine-bdd"]
 	path = src
 	url = https://gitlab.kuleuven.be/u0056096/parallel-machine-bdd
 	tag = v0.1.4
